<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GLMark2</string>
    <string name="title_activity_main">GLMark2</string>
    <string name="title_activity_editor">GLMark2 Benchmark Editor</string>
    <string name="title_activity_preferences">GLMark2 Settings</string>
    <string name="title_activity_about">About GLMark2</string>
    <string name="title_activity_results">GLMark2 Results</string>
    <string name="title_activity_glmark2">GLMark2</string>
    <string name="runButtonText">Run</string>
    <string name="saveButtonText">Save</string>

    <string name="saveMainOptionsText">Save list</string>
    <string name="loadMainOptionsText">Load list</string>
    <string name="deleteMainOptionsText">Delete list</string>
    <string name="settingsMainOptionsText">Settings</string>
    <string name="resultsMainOptionsText">Last results</string>
    <string name="aboutMainOptionsText">About</string>

    <string name="externalSaveDialogText">Save to external storage</string>

    <string name="runForeverPreferenceTitle">Run forever</string>
    <string name="runForeverPreferenceSummary">Run indefinitely, looping from the last benchmark back to the first</string>
    <string name="logDebugPreferenceTitle">Log debug messages</string>
    <string name="logDebugPreferenceSummary">Display debug messages in the log</string>

    <string name="about_name_version_format">GLMark2 %1$s</string>
    <string name="about_description">OpenGL (ES) 2.0 benchmark suite</string>
    <string name="about_copyright">Copyright © 2010-2012 Linaro Limited</string>
    <string name="about_url">http://launchpad.net/glmark2</string>
    <string name="about_license_1">
        glmark2 is free software: you can redistribute it and/or modify it
        under the terms of the GNU General Public License as published by the
        Free Software Foundation, either version 3 of the License, or (at your
        option) any later version
    </string>
    <string name="about_license_2">
        glmark2 is distributed in the hope that it will be useful, but WITHOUT ANY
        WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
        FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
        details.
    </string>

</resources>
