<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/save_benchmark_list"
          android:title="@string/saveMainOptionsText"
          android:icon="@drawable/ic_menu_save" />

    <item android:id="@+id/load_benchmark_list"
          android:title="@string/loadMainOptionsText"
          android:icon="@drawable/ic_menu_archive" />

    <item android:id="@+id/delete_benchmark_list"
          android:title="@string/deleteMainOptionsText"
          android:icon="@drawable/ic_menu_delete" />

    <item android:id="@+id/settings"
          android:title="@string/settingsMainOptionsText"
          android:icon="@drawable/ic_menu_preferences" />

    <item android:id="@+id/results"
          android:title="@string/resultsMainOptionsText"
          android:icon="@drawable/ic_menu_mark" />

    <item android:id="@+id/about"
          android:title="@string/aboutMainOptionsText"
          android:icon="@drawable/ic_menu_info_details" />
</menu>
